# uop_timetabling_bot

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
bot/: __main__.py
